# SparkFun_Pro_Micro_RP2350

./: .gitmodules  404.html  README.md  mkdocs.yml  sitemap.xml
.github/: README.md
Examples/Arducam_Demo/: Arducam_Demo.uf2  CMakeLists.txt  arducam_demo.cpp  rp2350_camera_test.pde
Examples/Arducam_Demo/sfe_pico_alloc/: CMakeLists.txt  sfe_pico_alloc.c  sfe_pico_alloc.h  sfe_pico_boards.h
Firmware/: pro_micro_rp2350_rainbow.uf2
Hardware/: RP2350A.lbr  SparkFun_ProMicro-RP2040.brd  SparkFun_ProMicro-RP2040.sch  SparkFun_ProMicro_RP2350.brd  SparkFun_ProMicro_RP2350.sch
Production/: SparkFun_ProMicro_RP2350-Panel-PanelizerSettings.txt  SparkFun_ProMicro_RP2350-Panel.GBL  SparkFun_ProMicro_RP2350-Panel.GBO  SparkFun_ProMicro_RP2350-Panel.GBP  SparkFun_ProMicro_RP2350-Panel.GBS  SparkFun_ProMicro_RP2350-Panel.GKO  SparkFun_ProMicro_RP2350-Panel.GL2  SparkFun_ProMicro_RP2350-Panel.GL3  SparkFun_ProMicro_RP2350-Panel.GTL  SparkFun_ProMicro_RP2350-Panel.GTO  SparkFun_ProMicro_RP2350-Panel.GTP  SparkFun_ProMicro_RP2350-Panel.GTS  SparkFun_ProMicro_RP2350-Panel.TXT  SparkFun_ProMicro_RP2350-Panel.brd  SparkFun_ProMicro_RP2350-PanelizerSettings.txt  ordering_instructions.txt
arduino_setup/: index.html
basic_assembly/: index.html
camera_assembly/: index.html
camera_demo/: index.html
circuitpython_setup/: index.html
docs/: arduino_setup.md  basic_assembly.md  bootloader.md  camera_assembly.md  camera_demo.md  circuitpython_setup.md  examples.md  hardware_assembly.md  hardware_overview.md  introduction.md  micropython_examples.md  micropython_setup.md  picoSDK_setup.md  resources.md  single_page.md  software_setup.md  troubleshooting.md  uf2.md
github/: index.html
hard_copy/: index.html
(+22 files in other folders)
